# furigana_gen

./: .gitignore  Cargo.toml  build.rs
data/: accents.tsv  accents.tsv.xz
src/: accent.rs  learner.rs  lib.rs
