[package]
name = "furigana_gen"
version = "0.1.0"
edition = "2021"

[lib]
name = "furigana_gen"
path = "src/lib.rs"

[dependencies]
vibrato = "0.5"
lz4_flex = "0.11"
quick-xml = "0.36.1"
fnv = "1.0.7"

[build-dependencies]
lzma-rs = "0.3"
lz4_flex = "0.11"

# This makes the (de)compresssion of the dictionary at build time
# faster, improving over-all build times.
[profile.dev.build-override]
opt-level = 2
[profile.release.build-override]
opt-level = 2
